update software page

--- a/software.html
+++ b/software.html
@@ -41,7 +41,10 @@
     </div>
   </div>
 </nav>
+<div id="logoBox" class="headerBox homeBox col-md-6">
+  <h1 id="UMLtag">UML DIAGRAMS made with draw.io</h1>
 
+</div>
 <!-- Bottom Navbar -->
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
@@ -54,8 +57,8 @@
 &nbsp;
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/bootstrap.js"></script>
-<p>Draw.io was used to generate these diagrams</p>
 <div id="UML"><img  src="Images/UML.png"  alt="Placeholder image"></div>
+
 
 </body>
 
