--- a/team.html
+++ b/team.html
@@ -50,7 +50,7 @@
   <p class="bios">Hi, my name is Fina and I am currently enrolled in the computer science program at Western University. I first gained exposure to programming through two online courses that I took during the summer of Grade 12 in high school. Since then, I have been able to further develop my skills in Python, Java, C, and VBA. I think that each programming language is fascinating in its own way, and object-oriented design in general is something that entices me. For this project, I will be focused on the front-end development, because it is something that I have had little exposure to, and would love to use this opportunity to further develop my skills in this area. In my spare time, I enjoy playing team sports and relaxing to a movie or two.
   </p>
 </div>
-<div class="imgbox col-md-offset-0 col-md-3"> <img src="Images/su.jpg" class="img-responsive" alt="Placeholder image">
+<div class="imgbox col-md-offset-0 col-md-3"> <img src="Images/Su.jpg" class="img-responsive" alt="Placeholder image">
   <h3 class="names">SU LIN</h3>
   <p class="bios">Hi, my name is Lin Su and I study Computer Science at UWO in pass the two years. Over two years’ study, I become experienced in python, java, C/C++ and SQL through courses in university and through side projects that I work on to keep myself busy. I am currently learning in IOS development and the swift programming language. I have chosen to do back-end and build database for this project to expand my skill set and to try something new, I'm more interested in learning more experienced into HTML, CSS and JavaScript.
   </p>
