--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div id="logoBox" class="homeBox col-md-6">
  
-<img id="logo" src="Images/logo.png" class="img-responsive" alt="Placeholder image">
+<img id="logo" src="Images/logoIndex.png" class="img-responsive" alt="Placeholder image">
 <h1>by CS2212 Team 19</h1>
 
 </div>
