--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
 
 <div id="logoBox" class="homeBox col-md-6">
  
-<img id="logo" src="Images/logoIndex.png" class="img-responsive" alt="Placeholder image">
+<img id="logo" src="Images/logo.png" class="img-responsive" alt="Placeholder image">
 <h1>by CS2212 Team 19</h1>
- <br/>
- <br/>
- <br/>
+
 </div>
 <div class="homeBox col-md-6 homeDesc">
   <p>Throughout this project and course, the eight of us will work together to experience building a software project in a group environment. Through this project, we will gain better team management skills, collaborative skills, as well as more insight into programming.</p>
