--- a/plan.html
+++ b/plan.html
@@ -187,6 +187,25 @@
 			Dependency: Database 
 		</p>
 </div>
+<div class="userStory col-md-6">
+		<h3 class="names">CONNECTING/SUGGESTING FRIENDS BASED ON COMMON EVENTS</h3>
+  <p class="bios"> Based on previous events that users attended, the application will suggest friends who it thinks you will have common interests with.
+ <br>
+  </p>
+	  <h4>Acceptance criteria: </h4>
+		<ul class="bios">
+			<li>Look for past events that users have been to</li>
+			<li>Identify recurring themes in past events that users have clicked ‘attending’ on</li>
+			<li>Match two users who have similar recurring themes</li>
+			<li>Suggest friends based on matches</li>
+		</ul>
+		<p class="bios">Feasability: Medium
+
+		</p>
+		<p class="bios">
+			Dependency: Database 
+		</p>
+</div>
 
 
 <!-- Bottom Navbar -->
