--- a/plan.html
+++ b/plan.html
@@ -188,7 +188,7 @@
 		</p>
 </div>
 <div align = "center" class="userStory col-md-6">
-		<h3 class="names">CONNECTING/SUGGESTING FRIENDS BASED ON COMMON EVENTS (Additional Feature for Stage 3)</h3>
+	<h3 class="names">CONNECTING/SUGGESTING FRIENDS BASED ON COMMON EVENTS</h3> <h6>(Additional Feature for Stage 3)</h6>
   <p class="bios"> Based on previous events that users attended, the application will suggest friends who it thinks you will have common interests with.
  <br>
   </p>
