--- a/plan.html
+++ b/plan.html
@@ -187,7 +187,7 @@
 			Dependency: Database 
 		</p>
 </div>
-<div align = "center" class="userStory col-md-6">
+<div class="userStory col-md-6">
 	<h3 class="names">CONNECTING/SUGGESTING FRIENDS BASED ON COMMON EVENTS</h3> <h6>(Additional Feature for Stage 3)</h6>
   <p class="bios"> Based on previous events that users attended, the application will suggest friends who it thinks you will have common interests with.
  <br>
