--- a/software.html
+++ b/software.html
@@ -57,9 +57,12 @@
 &nbsp;
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/bootstrap.js"></script>
+  <h1>STAGE 1:</h1>
 <div id="UML"><img  src="Images/UML.png"  alt="Placeholder image"></div>
-
-
+  <br/>
+  <h1>STAGE 2:</h1>
+<div id="UML"><img  src="https://raw.githubusercontent.com/markmansur/LetsGo/master/2212_UML.png?token=AX8ryzGZIT0XPFf6hlRrAgxrhKriYCLXks5Ywxs6wA%3D%3D
+"  alt="Placeholder image"></div>
 </body>
 
 
