--- a/software.html
+++ b/software.html
@@ -15,7 +15,7 @@
 
 
 
-<body style="padding-top: 70px; padding-bottom: 70px;" >
+<body align = "center" style="padding-top: 70px; padding-bottom: 70px;" >
 
 
 
