--- a/plan.html
+++ b/plan.html
@@ -43,7 +43,8 @@
     </div>
   </div>
 </nav>
-
+	
+<div>
 	<h1>Implemented Features:</h1>
 <div class="userStory col-md-6">
  	<h3 class="names">LOGGING IN WITH FACEBOOK</h3>
@@ -133,10 +134,12 @@
 			Dependency: Database 
 		</p>
 </div>
+	</div>
 	<br>
 	<br>
 	<br>
 	<br>
+	<div>
 	<h1> Features not Implemented </h1>
 	
 	
@@ -215,7 +218,7 @@
 		<p class="bios">
 			Dependency: Database 
 		</p>
-</div>
+		</div></div>
 
 
 <!-- Bottom Navbar -->
