--- a/plan.html
+++ b/plan.html
@@ -44,7 +44,7 @@
   </div>
 </nav>
 	
-<div>
+<div class = "hey">
 	<h1>Implemented Features:</h1>
 <div class="userStory col-md-6">
  	<h3 class="names">LOGGING IN WITH FACEBOOK</h3>
@@ -139,7 +139,7 @@
 	<br>
 	<br>
 	<br>
-	<div>
+	<div class = "hey">
 	<h1> Features not Implemented </h1>
 	
 	
