--- a/software.html
+++ b/software.html
@@ -62,8 +62,11 @@
 <div id="UML"><img  src="Images/UML.png"  alt="Placeholder image"></div>
   <br/>
   <h1>STAGE 2:</h1>
-<div id="UML"><img  src="https://raw.githubusercontent.com/markmansur/LetsGo/master/2212_UML.png?token=AX8ryzGZIT0XPFf6hlRrAgxrhKriYCLXks5Ywxs6wA%3D%3D
-"  alt="Placeholder image"></div>
+<div id="UML"><img  src="Images/2212_UML.png"  alt="Placeholder image"></div>
+  <br/>
+   <h1>STAGE 3:</h1>
+<div id="UML"><img  src="Images/UML.png"  alt="Placeholder image"></div>
+  <br/>
 </body>
 
 
