--- a/software.html
+++ b/software.html
@@ -65,7 +65,7 @@
 <div id="UML"><img  src="Images/2212_UML.png"  alt="Placeholder image"></div>
   <br/>
    <h1>STAGE 3:</h1>
-<div id="UML"><img  src="Images/UML.png"  alt="Placeholder image"></div>
+<div id="UML"><img  src="Images/2212_UML.png"  alt="Placeholder image"></div>
   <br/>
 </body>
 
