--- a/software.html
+++ b/software.html
@@ -62,10 +62,10 @@
 <div id="UML"><img  src="Images/UML.png"  alt="Placeholder image"></div>
   <br/>
   <h1>STAGE 2:</h1>
-<div id="UML"><img  src="Images/2212_UML.png"  alt="Placeholder image"></div>
+<div id="UML"><img  src="https://raw.githubusercontent.com/markmansur/LetsGo/master/2212_UML.png?token=AX8ry2bNUfq17fvXTqCaD1ZJv9lxCtqSks5Y3uwPwA%3D%3D"  alt="Placeholder image"></div>
   <br/>
    <h1>STAGE 3:</h1>
-<div id="UML"><img  src="Images/2212_UML.png"  alt="Placeholder image"></div>
+<div id="UML"><img  src="https://raw.githubusercontent.com/markmansur/LetsGo/master/2212_UML.png?token=AX8ry2bNUfq17fvXTqCaD1ZJv9lxCtqSks5Y3uwPwA%3D%3D"  alt="Placeholder image"></div>
   <br/>
 </body>
 
